--- a/pubs.bib
+++ b/pubs.bib
@@ -1,1 +1,28 @@
-@article{}
+@article{Swanstrom2016,
+    title       = {Data Science and the Essential Terms},
+    journal     = {AL MAGNET},
+    author      = {Ryan Swanstrom},
+    year        = {2016}, 
+	volume      = {3},
+	number      = {},
+	pages       = {4-5},
+	month       = {2},
+    url         = {https://view.publitas.com/al-magnet/al-magnet-3-data/page/4-5}
+}
+@phdthesis{Swanstrom2015,
+    title       = {Scoring A Software Development Organization With A Single Number},
+    school      = {South Dakota State University},
+    author      = {Ryan Swanstrom},
+    year        = {2015}, 
+	month       = {5},
+    url         = {https://github.com/ryanswanstrom/dissertation-scoring-sdo}
+}
+@techreport{Jensen2003,
+    author      = {Wayne  Jensen and Serban  Gavrila and Vladimir  Korolev and Rick Ayers and Ryan Swanstrom},
+    title       = {Picture Password: A Visual Login Technique for Mobile Devices},
+    month       = {July},
+    year        = {2003},
+    institution = {NIST},
+    number      = {NISTIR 7030},
+    url         = {http://csrc.nist.gov/publications/nistir/nistir-7030.pdf}
+}
